--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "express-async-handler": "^1.2.0",
     "flowbite": "^1.4.5",
     "jsonwebtoken": "^8.5.1",
+    "mdb-ui-kit": "^4.0.0",
     "mongoose": "^6.3.1",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
+    "react-css-theme-switcher": "^0.3.0",
     "sharp": "^0.30.4"
   }
 }
