--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "flowbite": "^1.4.5",
     "jsonwebtoken": "^8.5.1",
     "mdb-ui-kit": "^4.0.0",
+    "moment": "^2.29.3",
     "mongoose": "^6.3.1",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
     "react-css-theme-switcher": "^0.3.0",
+    "react-moment": "^1.1.2",
     "sharp": "^0.30.4"
   }
 }
