--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-async-handler": "^1.2.0",
     "flowbite": "^1.4.5",
     "jsonwebtoken": "^8.5.1",
+    "material-ui-popup-state": "^3.0.0",
     "mdb-ui-kit": "^4.0.0",
     "moment": "^2.29.3",
     "mongoose": "^6.3.1",
