--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,11 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
+    "material-ui-popup-state": "^3.1.0",
+    "mdb-ui-kit": "^4.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-moment": "^1.1.2",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
