--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,12 +15,17 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
-    "bootstrap": "^5.1.3",
     "formik": "^2.2.9",
+    "i18next": "^21.8.2",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "i18next-http-backend": "^1.4.0",
+    "js-cookie": "^3.0.1",
     "material-ui-popup-state": "^3.1.0",
     "mdb-ui-kit": "^4.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-dropzone": "^14.2.1",
+    "react-i18next": "^11.16.9",
     "react-moment": "^1.1.2",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
