--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "dotenv": "^16.0.1",
     "formik": "^2.2.9",
     "i18next": "^21.8.2",
     "i18next-browser-languagedetector": "^6.1.4",
