--- a/package.json
+++ b/package.json
@@ -14,20 +14,27 @@
   "author": "Kamil Kwiatkowski",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
     "cloudinary": "^1.29.1",
     "colors": "^1.4.0",
     "concurrently": "^7.1.0",
     "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.0",
     "express-async-handler": "^1.2.0",
+    "express-sesssion": "^1.15.5",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.3.1",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
+    "passport": "^0.6.0",
+    "passport-github": "^1.1.0",
+    "passport-github2": "^0.1.12",
     "path": "^0.12.7",
     "sharp": "^0.30.4"
   },
@@ -36,4 +43,3 @@
     "nodemon": "^2.0.15"
   }
 }
-
