--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,6 @@
     "i18next-http-backend": "^1.4.0",
     "js-cookie": "^3.0.1",
     "material-ui-popup-state": "^3.1.0",
-    "mdb-ui-kit": "^4.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-dropzone": "^14.2.1",
@@ -31,6 +30,7 @@
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-world-flags": "^1.5.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
