--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.18.0",
     "express-async-handler": "^1.2.0",
     "express-sesssion": "^1.15.5",
+    "flag-icon-css": "^4.1.7",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.3.1",
